--- a/IDriveWeb/assets/css/style.css
+++ b/IDriveWeb/assets/css/style.css
@@ -9,45 +9,29 @@ body{
 }
 
 .login-body{
-    /* background-color: #f4f5f7; */
     background-image: url("../img/bg-new.jpg");
     background-repeat: no-repeat;
     background-size: cover
 }
-
-
-#exo-form {
-    width: 50%;
-    padding-left: 140px;
+.admin-body{
+    background-color: #fff; 
 }
 
-#exo-form input{
-    display: block;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-#exo-form select{
-    display: block;
-    margin-bottom: 20px;
-    padding: 10px;
-    width: 60%;
-    border-radius: 4px;
-    border: 0;
-}
-
-.form-page{
-    padding: 120px;
-}
-#exo-form button{
-    border: 0;
-    text-align: center;
-    padding: 6px 16px;
-    border-radius: 7px;
-    color: white;
-    background-color: #000;
-    cursor: pointer;
-}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
 
 #login-form{
     box-shadow: 0 2px 10px rgb(0 0 0 / 25%);
@@ -85,91 +69,30 @@ body{
 #login-form h1{
     color: #42526e;
 }
-/* Homepage styles */
 
-.main-home-container nav{
-    padding: 0;
-    margin: 0;
-    background-color: rgb(42, 115, 204);
-}
 
-.main-home-container{
-    overflow:hidden;
+.home-item{
+    width: 80%;
+    margin: auto;
 }
-
-.main-home-container nav ul {
-    padding: 10px 240px;
-    margin: 0;
-}
-
-.main-home-container nav ul li{
-   display: inline-block;
-   font-size: 17px;
-   padding: 12px 22px;
-   cursor: pointer;
-   color: #fff;
-}
-.main-home-container nav ul li:hover{
-   color: #000;
- }
- .main-home-container nav ul li a{text-decoration: none;}
- .main-content{
-    width: 80%; 
-    margin: auto 20%;
-    padding: 50px;
- }
-.logout{
-    float: right;
-}
-.logout-btn{
-    text-decoration: none;
-    background: #336aad;
-    border-radius: 5px;
-    color: #fff;
+.admin-item{
+    background-color: fff;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 25%);
     padding: 10px;
-    border: none;
-    cursor: pointer;
-    margin-top: -12px;
-}
-.course-item{
-    background-color: #fff;
-    border-radius: 5px;
-    border: 1px solid #efefef;
-    width: 500px;
-    padding-left: 20px;
     margin-bottom: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
-
-.first-part p{margin-top: 30px;}
-/* .course-item img{float: right;} */
-
-.first-part span.btn-style{
-    border: 1px solid rgb(42, 115, 204);
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; 
-    background-color: rgb(255, 255, 255);
+.admin-item button{
+    border: 0;
+    text-align: center;
+    padding: 8px 16px;
+    border-radius: 7px;
+    color: white;
+    background-color: #0052cc;
+    float: right;
     cursor: pointer;
-    border-radius: 2px;
-    padding: 8px;
-    font-size: 15px;
-    font-weight: bold;
-    color: rgb(42, 115, 204);
-    text-decoration: none;
 }
-.first-part span.btn-style:hover{
-    background-color: rgb(42, 115, 204);
-    color: #fff;
-}
-.course-header p{
-    font-size: 18px;
-    margin-bottom: 30px;
-    width: 700px;
-}
-.bg-image{
-    background-image: url("../img/learn-code.jpg");
-    height: 300px;
-}
-.first-part span{
-    padding-left: 10px;
-    border-left: 2px solid orange;
+.admin-item form{
+    float: right;
+    margin-right: 20px;
 }
